Fix: Unit test